--- a/index.html
+++ b/index.html
@@ -61,6 +61,58 @@
             <!-- <img src="public/images/welcome-screen.png" alt="" /> -->
           </div>
         </div>
+        <div class="about-us">
+          <content class="about-us__content">
+            <div class="about-us__header">
+              <div class="about-us__text">
+                <h2>О нас</h2>
+                <span>
+                  <p>
+                    Компания Аранея работает на рынке информационных технологий
+                    с 2007 года, и сегодня мы — одна из лидирующих компаний
+                    на рынке IT-решений и полного спектра услуг по построению,
+                    оптимизации, поддержке, развитию IT-инфраструктуры.
+                  </p>
+                  <p>
+                    Мы — это высококвалифицированная команда специалистов
+                    с богатым практическим опытом построения надёжных
+                    и эффективных IT-решений.
+                  </p>
+                </span>
+              </div>
+              <div class="about-us__logo-box"></div>
+            </div>
+
+            <div class="about-us__middle">
+              <div class="about-us__first-box"></div>
+              <div class="about-us__second-box"></div>
+              <div class="about-us__third-box"></div>
+            </div>
+            <div class="about-us__subtitle">
+              <p>Наши партнеры</p>
+            </div>
+            <div class="about-us__hr">
+              <hr />
+            </div>
+            <div class="about-us__partners">
+              <div class="about-us__kaspersky">
+                <img src="/public/images/kaspersky.png" alt="" />
+              </div>
+              <div class="about-us__dr-web">
+                <img src="/public/images/dr-web.png" alt="" />
+              </div>
+              <div class="about-us__1c">
+                <img src="/public/images/1c-logo.png" alt="" />
+              </div>
+              <div class="about-us__joomba">
+                <img src="/public/images/joomba-logo.png" alt="" />
+              </div>
+              <div class="about-us__bitrix">
+                <img src="/public/images/bitrix-logo.png" alt="" />
+              </div>
+            </div>
+          </content>
+        </div>
       </main>
     </div>
     <script type="module" src="src/js/main.js"></script>
