--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="src/scss/style.css" />
 
     <title>Araney</title>
   </head>
@@ -84,9 +85,33 @@
             </div>
 
             <div class="about-us__middle">
-              <div class="about-us__first-box"></div>
-              <div class="about-us__second-box"></div>
-              <div class="about-us__third-box"></div>
+              <div class="about-us__first-box">
+                <div class="about-us__stat">
+                  <h2>15 лет</h2>
+                  <p>На рынке труда с 2007 года</p>
+                </div>
+                <div class="about-us__icon">
+                  <img src="/public/images/icon-emoji1.png" alt="" />
+                </div>
+              </div>
+              <div class="about-us__second-box">
+                <div class="about-us__stat">
+                  <h2>Более 150</h2>
+                  <p>Успешных проектов</p>
+                </div>
+                <div class="about-us__icon">
+                  <img src="/public/images/icon-emoji2.png" alt="" />
+                </div>
+              </div>
+              <div class="about-us__third-box">
+                <div class="about-us__stat">
+                  <h2>35</h2>
+                  <p>Специалистов в компании</p>
+                </div>
+                <div class="about-us__icon">
+                  <img src="/public/images/icon-emoji3.png" alt="" />
+                </div>
+              </div>
             </div>
             <div class="about-us__subtitle">
               <p>Наши партнеры</p>
