--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/scss/style.css" />
+    <link rel="stylesheet" href="src/style/style.css" />
 
     <title>Araney</title>
   </head>
@@ -81,7 +81,9 @@
                   </p>
                 </span>
               </div>
-              <div class="about-us__logo-box"></div>
+              <div class="about-us__logo-box">
+                <img src="/public/images/aranay-subtitle.png" alt="" />
+              </div>
             </div>
 
             <div class="about-us__middle">
