--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <header class="header">
         <div class="header__wrapper">
           <!-- <div class="header__brand"> -->
-          <img class="header__logo" src="public/images/Logo.png" alt="" />
+          <img
+            class="header__logo"
+            src="public/images/header-logo.png"
+            alt="header-logo"
+          />
           <!-- </div> -->
           <div class="header__about-us">
             <span>О нас</span>
