--- a/index.html
+++ b/index.html
@@ -127,19 +127,19 @@
             </div>
             <div class="about-us__partners">
               <div class="about-us__kaspersky">
-                <img src="/public/images/kaspersky.png" alt="" />
+                <img src="/public/images/kaspersky.png" alt="kaspersky-logo" />
               </div>
               <div class="about-us__dr-web">
-                <img src="/public/images/dr-web.png" alt="" />
+                <img src="/public/images/dr-web.png" alt="dr-web-logo" />
               </div>
               <div class="about-us__1c">
-                <img src="/public/images/1c-logo.png" alt="" />
+                <img src="/public/images/1c-logo.png" alt="1c-logo" />
               </div>
               <div class="about-us__joomba">
-                <img src="/public/images/joomba-logo.png" alt="" />
+                <img src="/public/images/joomba-logo.png" alt="joomba-logo" />
               </div>
               <div class="about-us__bitrix">
-                <img src="/public/images/bitrix-logo.png" alt="" />
+                <img src="/public/images/bitrix-logo.png" alt="bitrix-logo" />
               </div>
             </div>
           </content>
