--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
             <div class="about-us__partners">
               <div class="about-us__kaspersky">
-                <img src="/public/images/kaspersky.png" alt="kaspersky-logo" />
+                <img src="/src/images/kaspersky.png" alt="kaspersky-logo" />
               </div>
               <div class="about-us__dr-web">
                 <img src="/public/images/dr-web.png" alt="dr-web-logo" />
