--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@
                 <img src="/src/images/kaspersky.png" alt="kaspersky-logo" />
               </div>
               <div class="about-us__dr-web">
-                <img src="/public/images/dr-web.png" alt="dr-web-logo" />
+                <img src="/src/" alt="dr-web-logo" />
               </div>
               <div class="about-us__1c">
-                <img src="/public/images/1c-logo.png" alt="1c-logo" />
+                <img src="/src/images/1c-logo.png" alt="1c-logo" />
               </div>
               <div class="about-us__joomba">
-                <img src="/public/images/joomba-logo.png" alt="joomba-logo" />
+                <img src="/src/images/joomba-logo.png" alt="joomba-logo" />
               </div>
               <div class="about-us__bitrix">
-                <img src="/public/images/bitrix-logo.png" alt="bitrix-logo" />
+                <img src="/src/images/bitrix-logo.png" alt="bitrix-logo" />
               </div>
             </div>
           </content>
