--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src="/src/images/kaspersky.png" alt="kaspersky-logo" />
               </div>
               <div class="about-us__dr-web">
-                <img src="/src/" alt="dr-web-logo" />
+                <img src="/src/images/dr-web.png" alt="dr-web-logo" />
               </div>
               <div class="about-us__1c">
                 <img src="/src/images/1c-logo.png" alt="1c-logo" />
