--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
   </head>
   <body>
     <div id="app">
-      <header class="header">
-        <div class="header__wrapper">
-          <!-- <div class="header__brand"> -->
-          <img
-            class="header__logo"
-            src="public/images/header-logo.png"
-            alt="header-logo"
-          />
-          <!-- </div> -->
-          <div class="header__about-us">
-            <span>О нас</span>
-          </div>
-          <div class="header__working">
-            <span>Как мы работаем</span>
-          </div>
-          <div class="header__services">
-            <span>Услуги</span>
-          </div>
-          <div class="header__favourites">
-            <span>Избранные кейсы</span>
-          </div>
+      <main>
+        <header class="header">
+          <div class="header__wrapper">
+            <!-- <div class="header__brand"> -->
+            <img
+              class="header__logo"
+              src="/src/images/header-logo.png"
+              alt="header-logo"
+            />
+            <!-- </div> -->
+            <div class="header__about-us">
+              <span>О нас</span>
+            </div>
+            <div class="header__working">
+              <span>Как мы работаем</span>
+            </div>
+            <div class="header__services">
+              <span>Услуги</span>
+            </div>
+            <div class="header__favourites">
+              <span>Избранные кейсы</span>
+            </div>
 
-          <!-- <div class="header__links">
+            <!-- <div class="header__links">
 
       </div> -->
-        </div>
-        <div class="header__button">
-          <button>Написать нам</button>
-        </div>
-      </header>
-      <main>
+          </div>
+          <div class="header__button">
+            <button>Написать нам</button>
+          </div>
+        </header>
         <div class="welcome-screen">
           <div class="welcome-screen__left-box">
             <div class="welcome-screen__info">
@@ -86,7 +86,7 @@
                 </span>
               </div>
               <div class="about-us__logo-box">
-                <img src="/public/images/aranay-subtitle.png" alt="" />
+                <img src="/src/images/aranay-subtitle.png" alt="" />
               </div>
             </div>
 
@@ -97,7 +97,7 @@
                   <p>На рынке труда с 2007 года</p>
                 </div>
                 <div class="about-us__icon">
-                  <img src="/public/images/icon-emoji1.png" alt="" />
+                  <img src="/src/images/icon-emoji1.png" alt="smile" />
                 </div>
               </div>
               <div class="about-us__second-box">
@@ -106,7 +106,7 @@
                   <p>Успешных проектов</p>
                 </div>
                 <div class="about-us__icon">
-                  <img src="/public/images/icon-emoji2.png" alt="" />
+                  <img src="/src/images/icon-emoji2.png" alt="heart" />
                 </div>
               </div>
               <div class="about-us__third-box">
@@ -115,7 +115,7 @@
                   <p>Специалистов в компании</p>
                 </div>
                 <div class="about-us__icon">
-                  <img src="/public/images/icon-emoji3.png" alt="" />
+                  <img src="/src/images/icon-emoji3.png" alt="hands" />
                 </div>
               </div>
             </div>
