--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
   </head>
   <body>
     <div id="app">
+      <header class="header">
+        <div class="header__wrapper">
+          <!-- <div class="header__brand"> -->
+          <img
+            class="header__logo"
+            src="/src/images/header-logo.png"
+            alt="header-logo"
+          />
+          <!-- </div> -->
+          <div class="header__about-us">
+            <span>О нас</span>
+          </div>
+          <div class="header__working">
+            <span>Как мы работаем</span>
+          </div>
+          <div class="header__services">
+            <span>Услуги</span>
+          </div>
+          <div class="header__favourites">
+            <span>Избранные кейсы</span>
+          </div>
+
+          <!-- <div class="header__links">
+
+    </div> -->
+        </div>
+        <div class="header__button">
+          <button>Написать нам</button>
+        </div>
+      </header>
       <main>
-        <header class="header">
-          <div class="header__wrapper">
-            <!-- <div class="header__brand"> -->
-            <img
-              class="header__logo"
-              src="/src/images/header-logo.png"
-              alt="header-logo"
-            />
-            <!-- </div> -->
-            <div class="header__about-us">
-              <span>О нас</span>
-            </div>
-            <div class="header__working">
-              <span>Как мы работаем</span>
-            </div>
-            <div class="header__services">
-              <span>Услуги</span>
-            </div>
-            <div class="header__favourites">
-              <span>Избранные кейсы</span>
-            </div>
-
-            <!-- <div class="header__links">
-
-      </div> -->
-          </div>
-          <div class="header__button">
-            <button>Написать нам</button>
-          </div>
-        </header>
         <div class="welcome-screen">
           <div class="welcome-screen__left-box">
             <div class="welcome-screen__info">
@@ -144,6 +144,36 @@
             </div>
           </content>
         </div>
+        <div class="how-we-work">
+          <div class="how-we-work__left-wrapper">
+            <div class="how-we-work__left-content">
+              <div class="how-we-work__title">
+                <h1>Как мы работаем</h1>
+                <p>
+                  Мы придерживаемся индивидуальному подходу в решении задач.
+                  Однако в общих чертах любой проект разрабатывается в 4 шага
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="how-we-work__left-wrapper">
+            <div class="how-we-work__right-content">
+              <div class="how-we-work__text">
+                <span>Шаг 1</span>
+                <h1>Изучение проекта</h1>
+                <p>
+                  Мы тщательно изучаем поставленную задачу, уточним у вас все
+                  детали и ограничения проекта, после чего предложим варианты
+                  решения
+                </p>
+              </div>
+              <div class="how-we-work__picture">
+                <img src="src/images/illustration1.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div></div>
       </main>
     </div>
     <script type="module" src="src/js/main.js"></script>
