--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <!-- <div class="header__brand"> -->
           <img
             class="header__logo"
-            src="/src/images/header-logo.png"
+            src="./src/images/header-logo.png"
             alt="header-logo"
           />
           <!-- </div> -->
@@ -168,7 +168,7 @@
                 </p>
               </div>
               <div class="how-we-work__picture">
-                <img src="src/images/illustration1.png" alt="" />
+                <img src="/src/images/illustration1.png" alt="" />
               </div>
             </div>
           </div>
