--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </span>
               </div>
               <div class="about-us__logo-box">
-                <img src="/src/images/aranay-subtitle.png" alt="" />
+                <img src="./src/images/aranay-subtitle.png" alt="" />
               </div>
             </div>
 
@@ -97,7 +97,7 @@
                   <p>На рынке труда с 2007 года</p>
                 </div>
                 <div class="about-us__icon">
-                  <img src="/src/images/icon-emoji1.png" alt="smile" />
+                  <img src="./src/images/icon-emoji1.png" alt="smile" />
                 </div>
               </div>
               <div class="about-us__second-box">
@@ -106,7 +106,7 @@
                   <p>Успешных проектов</p>
                 </div>
                 <div class="about-us__icon">
-                  <img src="/src/images/icon-emoji2.png" alt="heart" />
+                  <img src="./src/images/icon-emoji2.png" alt="heart" />
                 </div>
               </div>
               <div class="about-us__third-box">
@@ -115,7 +115,7 @@
                   <p>Специалистов в компании</p>
                 </div>
                 <div class="about-us__icon">
-                  <img src="/src/images/icon-emoji3.png" alt="hands" />
+                  <img src="./src/images/icon-emoji3.png" alt="hands" />
                 </div>
               </div>
             </div>
