--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </p>
               </div>
               <div class="how-we-work__picture">
-                <img src="/src/images/illustration1.png" alt="" />
+                <img src="./src/images/illustration1.png" alt="" />
               </div>
             </div>
           </div>
