--- a/index.html
+++ b/index.html
@@ -173,7 +173,175 @@
             </div>
           </div>
         </div>
-        <div></div>
+        <div class="services">
+          <div class="services__title">
+            <h2>Услуги</h2>
+          </div>
+          <div class="services__content">
+            <div class="first_content_block services__content_block">
+              <div class="services__description">
+                <div class="services__wrapper">
+                  <h2>Разработка веб-приложений</h2>
+                  <p>
+                    Мобильные приложения, PWA, информационные системы,
+                    веб-сервисы, порталы и интернет-маркетплейсы
+                  </p>
+                </div>
+                <div class="services__button">
+                  <button>Написать нам</button>
+                </div>
+              </div>
+
+              <div class="services__img">
+                <img src="./src/images/services-img-1.png" alt="" srcset="" />
+              </div>
+            </div>
+            <div class="services__content_block">
+              <div class="services__description">
+                <div class="services__wrapper">
+                  <h2>Разработка калькуляторов</h2>
+                  <p>
+                    Программы, просчитывающие итоговую конфигурацию по вводным
+                    параметрам
+                  </p>
+                </div>
+                <div class="services__button">
+                  <button>Написать нам</button>
+                </div>
+              </div>
+
+              <div class="services__img">
+                <img src="./src/images/services-img-2.png" alt="" srcset="" />
+              </div>
+            </div>
+            <div class="services__content_block">
+              <div class="services__description">
+                <div class="services__wrapper">
+                  <h2>Интеграция ERP, CRM</h2>
+                  <p>
+                    Мой склад, 1C: управление предприятием, Bitrix 24, либо же
+                    специализированное, кастомное решение
+                  </p>
+                </div>
+                <div class="services__button">
+                  <button>Написать нам</button>
+                </div>
+              </div>
+
+              <div class="services__img">
+                <img src="./src/images/services-img-3.png" alt="" srcset="" />
+              </div>
+            </div>
+            <div class="services__content_block">
+              <div class="services__description">
+                <div class="services__wrapper">
+                  <h2>Системы управления</h2>
+                  <p>
+                    Промышленные системы управления: от заводских линий и
+                    светодиодных табло, до комплексы по контролю транспорта
+                  </p>
+                </div>
+                <div class="services__button">
+                  <button>Написать нам</button>
+                </div>
+              </div>
+
+              <div class="services__img">
+                <img src="./src/images/services-img-4.png" alt="" srcset="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="selected-cases">
+          <div class="selected-cases__title">
+            <h2>Избранные кейсы</h2>
+          </div>
+          <div class="selected-cases__content">
+            <div class="selected-cases__top_content">
+              <div class="selected-cases__top_content__left">
+                <div class="selected-cases__am-block">
+                  <div class="selected-cases__wrapper">
+                    <div class="selected-cases__text">
+                      <h2>Ароматный мир</h2>
+                      <p>
+                        Полный цикл работ по разработке личного кабинета,
+                        включая интеграцию с учётной системой, заказом
+                        через сайт и блогом
+                      </p>
+                    </div>
+                    <div class="selected-cases__logo">
+                      <img src="./src/images/am-logo.png" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="selected-cases__top_content__right">
+                <div class="selected-cases__rzd_block">
+                  <div class="selected-cases__rzd-img"></div>
+                  <div class="selected-cases__wrapper">
+                    <div class="selected-cases__text">
+                      <h2>РЖД</h2>
+                      <p>
+                        Аппаратно программный комплекс по состоянию бесстыкового
+                        пути
+                      </p>
+                    </div>
+                    <div class="selected-cases__logo">
+                      <img src="./src/images/rzd-logo.png" alt="" />
+                    </div>
+                  </div>
+                </div>
+                <div class="selected-cases__declarant_block">
+                  <div class="selected-cases__wrapper">
+                    <div class="selected-cases__text">
+                      <h2>Декларант</h2>
+                      <p>Разработка портала для работы с таможней</p>
+                    </div>
+                    <div class="selected-cases__logo">
+                      <img src="./src/images/declarant-logo.png" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="selected-cases__bottom_content">
+              <div class="selected-cases__ice-palace">
+                <div class="selected-cases__wrapper">
+                  <div class="selected-cases__text">
+                    <h2>Ледовый дворец</h2>
+                    <p>
+                      Светодиодное табло на Ледовом дворце с интеграцией в
+                      билетную систему с целью отображения актуальных цен и
+                      количества оставшихся в продаже билетов
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="selected-cases__cryptonator">
+                <div class="selected-cases__wrapper">
+                  <div class="selected-cases__text">
+                    <h2>Cryptonator</h2>
+                    <p>Бекенд портала, два расширения для браузера</p>
+                  </div>
+                </div>
+              </div>
+              <div class="selected-cases__add">
+                <div class="selected-cases__add-wrapper">
+                  <div class="selected-cases__plus-icon">
+                    <img src="./src/images/add-icon.png" alt="" />
+                  </div>
+                  <div class="selected-cases__add-text">
+                    <h3>Нажмите, чтобы загрузить еще 3 работы</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- <div class="item item_4">4</div>
+            <div class="item item_5">5</div>
+            <div class="item item_6">6</div> -->
+          </div>
+        </div>
       </main>
     </div>
     <script type="module" src="src/js/main.js"></script>
