--- a/index.html
+++ b/index.html
@@ -336,11 +336,10 @@
                 </div>
               </div>
             </div>
-
-            <!-- <div class="item item_4">4</div>
-            <div class="item item_5">5</div>
-            <div class="item item_6">6</div> -->
           </div>
+        </div>
+        <div class="discuss">
+          <div class="discuss__wrapper"></div>
         </div>
       </main>
     </div>
