--- a/index.html
+++ b/index.html
@@ -339,9 +339,93 @@
           </div>
         </div>
         <div class="discuss">
-          <div class="discuss__wrapper"></div>
+          <div class="discuss__wrapper">
+            <div class="discuss__left-box">
+              <div class="discuss__text">
+                <h2>Хотите обсудить ваш проект?</h2>
+                <h3>
+                  Оставьте ваши данные и мы свяжемся с вами ближайшее время
+                </h3>
+              </div>
+              <div class="discuss__img">
+                <img src="/src/images/discuss-img.png" alt="" />
+              </div>
+            </div>
+            <div class="discuss__right-box">
+              <div class="discuss__content">
+                <div class="discuss__form_title">
+                  <h3>Оставить заявку</h3>
+                </div>
+                <div class="discuss__form_top">
+                  <div class="discuss__form_left">
+                    <p>Имя</p>
+                    <div class="discuss__form_input">
+                      <input type="text" placeholder="Как к вам обращаться" />
+                    </div>
+                  </div>
+                  <div class="discuss__form_right">
+                    <p>Телефон</p>
+                    <div class="discuss__form_input">
+                      <input type="text" placeholder="Номер для связи" />
+                    </div>
+                  </div>
+                </div>
+                <div class="discuss__form_middle">
+                  <p>Почта</p>
+                  <div class="discuss__form_input">
+                    <input type="text" placeholder="Почта для связи" />
+                  </div>
+                </div>
+                <div class="discuss__form_bottom">
+                  <p>Сообщение</p>
+                  <div class="discuss__form_input">
+                    <textarea
+                      cols="30"
+                      rows="10"
+                      placeholder="Опишите вашу задачу"
+                    ></textarea>
+                  </div>
+                </div>
+                <div class="discuss__form_add">
+                  <p>Прикрепить файл</p>
+                  <img src="./src/images/add-icon.png" alt="" />
+                </div>
+                <div class="discuss__form_button">
+                  <button>Оставить заявку</button>
+                </div>
+              </div>
+              <div class="discuss__policy">
+                <p>
+                  Заполняя данную форму, вы принимаете условия
+                  <a href="">Соглашения об использовании сайта</a>, и
+                  соглашаетесь с
+                  <a href=""
+                    >Правилами обработки и использования персональных данных</a
+                  >
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
       </main>
+      <footer class="footer">
+        <div class="footer__wrapper">
+          <div class="footer__email">
+            <h2>info@araneya.com</h2>
+          </div>
+          <div class="footer__bottom">
+            <div class="footer__logo">
+              <img src="./src/images/araney-footer-logo.png" alt="" />
+            </div>
+            <div class="footer__info">
+              <p>ООО “АВ-груп”, ИНН 7811379777</p>
+            </div>
+            <div class="footer__year">
+              <p>2022 год</p>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
     <script type="module" src="src/js/main.js"></script>
   </body>
