--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
               <p>ООО “АВ-груп”, ИНН 7811379777</p>
             </div>
             <div class="footer__year">
-              <p>2022 год</p>
+              <p>2022 год test</p>
             </div>
           </div>
         </div>
