--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="welcome-screen__left-box">
             <div class="welcome-screen__info">
               <div class="welcome-screen__title">
-                <h1>Выводим бизнес на новый уровень</h1>
+                <h1>Выводим бизнес на новый уровень</h1>
               </div>
               <div class="welcome-screen__subtitle">
                 <h3>Решения, которые действительно работают</h3>
@@ -348,7 +348,7 @@
                 </h3>
               </div>
               <div class="discuss__img">
-                <img src="/src/images/discuss-img.png" alt="" />
+                <img src="./src/images/discuss-img.png" alt="" />
               </div>
             </div>
             <div class="discuss__right-box">
