--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <div id="app">
       <header class="header">
         <div class="header__wrapper">
-          <!-- <div class="header__brand"> -->
           <img
             class="header__logo"
             src="./src/images/header-logo.png"
             alt="header-logo"
           />
-          <!-- </div> -->
+
           <div class="header__about-us">
             <span>О нас</span>
           </div>
@@ -36,10 +35,6 @@
           <div class="header__favourites">
             <span>Избранные кейсы</span>
           </div>
-
-          <!-- <div class="header__links">
-
-    </div> -->
         </div>
         <div class="header__button">
           <button>Написать нам</button>
@@ -62,9 +57,7 @@
               </div>
             </div>
           </div>
-          <div class="welcome-screen__picture">
-            <!-- <img src="public/images/welcome-screen.png" alt="" /> -->
-          </div>
+          <div class="welcome-screen__picture"></div>
         </div>
         <div class="about-us">
           <content class="about-us__content">
@@ -73,20 +66,20 @@
                 <h2>О нас</h2>
                 <span>
                   <p>
-                    Компания Аранея работает на рынке информационных технологий
-                    с 2007 года, и сегодня мы — одна из лидирующих компаний
-                    на рынке IT-решений и полного спектра услуг по построению,
+                    Компания Аранея работает на рынке информационных технологий
+                    с 2007 года, и сегодня мы — одна из лидирующих компаний на
+                    рынке IT-решений и полного спектра услуг по построению,
                     оптимизации, поддержке, развитию IT-инфраструктуры.
                   </p>
                   <p>
-                    Мы — это высококвалифицированная команда специалистов
-                    с богатым практическим опытом построения надёжных
-                    и эффективных IT-решений.
+                    Мы — это высококвалифицированная команда специалистов с
+                    богатым практическим опытом построения надёжных и
+                    эффективных IT-решений.
                   </p>
                 </span>
               </div>
               <div class="about-us__logo-box">
-                <img src="./src/images/aranay-subtitle.png" alt="" />
+                <img src="./src/images/aranay-subtitle.png" alt="araney-logo" />
               </div>
             </div>
 
@@ -150,8 +143,8 @@
               <div class="how-we-work__title">
                 <h1>Как мы работаем</h1>
                 <p>
-                  Мы придерживаемся индивидуальному подходу в решении задач.
-                  Однако в общих чертах любой проект разрабатывается в 4 шага
+                  Мы придерживаемся индивидуальному подходу в решении задач.
+                  Однако в общих чертах любой проект разрабатывается в 4 шага
                 </p>
               </div>
             </div>
@@ -162,13 +155,13 @@
                 <span>Шаг 1</span>
                 <h1>Изучение проекта</h1>
                 <p>
-                  Мы тщательно изучаем поставленную задачу, уточним у вас все
-                  детали и ограничения проекта, после чего предложим варианты
+                  Мы тщательно изучаем поставленную задачу, уточним у вас все
+                  детали и ограничения проекта, после чего предложим варианты
                   решения
                 </p>
               </div>
               <div class="how-we-work__picture">
-                <img src="./src/images/illustration1.png" alt="" />
+                <img src="./src/images/illustration1.png" alt="illustration" />
               </div>
             </div>
           </div>
@@ -184,7 +177,7 @@
                   <h2>Разработка веб-приложений</h2>
                   <p>
                     Мобильные приложения, PWA, информационные системы,
-                    веб-сервисы, порталы и интернет-маркетплейсы
+                    веб-сервисы, порталы и интернет-маркетплейсы
                   </p>
                 </div>
                 <div class="services__button">
@@ -193,7 +186,7 @@
               </div>
 
               <div class="services__img">
-                <img src="./src/images/services-img-1.png" alt="" srcset="" />
+                <img src="./src/images/services-img-1.png" alt="services-1" />
               </div>
             </div>
             <div class="services__content_block">
@@ -211,7 +204,7 @@
               </div>
 
               <div class="services__img">
-                <img src="./src/images/services-img-2.png" alt="" srcset="" />
+                <img src="./src/images/services-img-2.png" alt="services-2" />
               </div>
             </div>
             <div class="services__content_block">
@@ -229,7 +222,7 @@
               </div>
 
               <div class="services__img">
-                <img src="./src/images/services-img-3.png" alt="" srcset="" />
+                <img src="./src/images/services-img-3.png" alt="services-3" />
               </div>
             </div>
             <div class="services__content_block">
@@ -247,7 +240,7 @@
               </div>
 
               <div class="services__img">
-                <img src="./src/images/services-img-4.png" alt="" srcset="" />
+                <img src="./src/images/services-img-4.png" alt="services-4" />
               </div>
             </div>
           </div>
@@ -264,13 +257,13 @@
                     <div class="selected-cases__text">
                       <h2>Ароматный мир</h2>
                       <p>
-                        Полный цикл работ по разработке личного кабинета,
-                        включая интеграцию с учётной системой, заказом
-                        через сайт и блогом
+                        Полный цикл работ по разработке личного кабинета,
+                        включая интеграцию с учётной системой, заказом через
+                        сайт и блогом
                       </p>
                     </div>
                     <div class="selected-cases__logo">
-                      <img src="./src/images/am-logo.png" alt="" />
+                      <img src="./src/images/am-logo.png" alt="am-logo" />
                     </div>
                   </div>
                 </div>
@@ -287,7 +280,7 @@
                       </p>
                     </div>
                     <div class="selected-cases__logo">
-                      <img src="./src/images/rzd-logo.png" alt="" />
+                      <img src="./src/images/rzd-logo.png" alt="rzd-logo" />
                     </div>
                   </div>
                 </div>
@@ -298,7 +291,10 @@
                       <p>Разработка портала для работы с таможней</p>
                     </div>
                     <div class="selected-cases__logo">
-                      <img src="./src/images/declarant-logo.png" alt="" />
+                      <img
+                        src="./src/images/declarant-logo.png"
+                        alt="declarant-logo"
+                      />
                     </div>
                   </div>
                 </div>
@@ -328,7 +324,7 @@
               <div class="selected-cases__add">
                 <div class="selected-cases__add-wrapper">
                   <div class="selected-cases__plus-icon">
-                    <img src="./src/images/add-icon.png" alt="" />
+                    <img src="./src/images/add-icon.png" alt="add-icon" />
                   </div>
                   <div class="selected-cases__add-text">
                     <h3>Нажмите, чтобы загрузить еще 3 работы</h3>
@@ -344,11 +340,11 @@
               <div class="discuss__text">
                 <h2>Хотите обсудить ваш проект?</h2>
                 <h3>
-                  Оставьте ваши данные и мы свяжемся с вами ближайшее время
+                  Оставьте ваши данные и мы свяжемся с вами ближайшее время
                 </h3>
               </div>
               <div class="discuss__img">
-                <img src="./src/images/discuss-img.png" alt="" />
+                <img src="./src/images/discuss-img.png" alt="discuss" />
               </div>
             </div>
             <div class="discuss__right-box">
@@ -388,7 +384,7 @@
                 </div>
                 <div class="discuss__form_add">
                   <p>Прикрепить файл</p>
-                  <img src="./src/images/add-icon.png" alt="" />
+                  <img src="./src/images/add-icon.png" alt="add-icon" />
                 </div>
                 <div class="discuss__form_button">
                   <button>Оставить заявку</button>
@@ -415,13 +411,16 @@
           </div>
           <div class="footer__bottom">
             <div class="footer__logo">
-              <img src="./src/images/araney-footer-logo.png" alt="" />
+              <img
+                src="./src/images/araney-footer-logo.png"
+                alt="araney-footer"
+              />
             </div>
             <div class="footer__info">
               <p>ООО “АВ-груп”, ИНН 7811379777</p>
             </div>
             <div class="footer__year">
-              <p>2022 год test</p>
+              <p>2022 год</p>
             </div>
           </div>
         </div>
