--- a/index.html
+++ b/index.html
@@ -420,12 +420,13 @@
               <p>ООО “АВ-груп”, ИНН 7811379777</p>
             </div>
             <div class="footer__year">
-              <p>2022 год</p>
+              <p class="footer__current-year"></p>
             </div>
           </div>
         </div>
       </footer>
     </div>
+    <script src="src/js/index.js"></script>
     <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
